v1.0.5 - Footer Fix
Fixed the Uverit logo not showing up.

--- a/int_resources/css/general.css
+++ b/int_resources/css/general.css
@@ -954,16 +954,15 @@ footer .wrapper{
 }
 
 .socials svg{
-    height:70%;
+    height:80%;
     transition:0.15s;
 }
 
 .socials a:hover svg{
-    height:90%;
+    height:100%;
 }
 
 .socials svg *{
-    height:70%;
     fill:var(--txt-faded2);
     transition:0.15s;
 }
